--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "body-parser": "^1.13.3",
     "dateformat": "^1.0.12",
     "express": "^4.13.3",
+    "jsonfile": "^2.3.1",
     "nforce": "^1.5.0",
     "pg": "^4.5.6",
     "promise": "^7.1.1",
+    "replace": "^0.3.0",
     "request": "^2.72.0",
     "sequelize": "^3.23.4",
     "simple-oauth2": "^0.7.0",
