--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "request": "^2.72.0",
     "sequelize": "^3.23.4",
     "simple-oauth2": "^0.7.0",
-    "truncate": "^2.0.0"
+    "truncate": "^2.0.0",
+    "word-wrap": "^1.1.0"
   }
 }
